# browser-engineering

./: .gitignore  browser.py
cpp/: meson.build
cpp/src/: main.cpp  url.cpp  url.h
go/: browser.go  go.mod  url.go  utils.go
py/: browser.py  constants.py  draw.py  html.py  layout.py  url.py
src/: main.cpp  url.cpp  url.h
